fixed z-index

--- a/css/less/product.less
+++ b/css/less/product.less
@@ -51,39 +51,40 @@
 	.owl-controls{
 		top: 200px;
 		width: 100%;
+		z-index: 1;
 	}
 
-		.owl-buttons{
-			.owl-prev,
-			.owl-next{
-				.transition;
-				.rounded(40px);
-				background-color: @color3;
-				height: 40px;
-				top: 00px;
-				width: 40px;
-				z-index: 9999;
-				&:before{
-					.before;
-					.sprite(0,-14px);
-					width: 13px;
-					height: 21px;
-					top: 10px;
-					left: 12px;
-				}
-				&:hover{
-					background-color: @color4;
-				}
+	.owl-buttons{
+		.owl-prev,
+		.owl-next{
+			.transition;
+			.rounded(40px);
+			background-color: @color3;
+			height: 40px;
+			top: 00px;
+			width: 40px;
+			z-index: 9999;
+			&:before{
+				.before;
+				.sprite(0,-14px);
+				height: 21px;
+				left: 12px;
+				top: 10px;
+				width: 13px;
 			}
-
-			@x : 0;
-			.owl-prev{
-				left: @x;
-			}
-			.owl-next{
-				right: @x;
+			&:hover{
+				background-color: @color4;
 			}
 		}
+
+		@x : 0;
+		.owl-prev{
+			left: @x;
+		}
+		.owl-next{
+			right: @x;
+		}
+	}
 }
 
 
@@ -122,9 +123,9 @@
 	.description{
 		padding-top: 22px;
 		.text{
+			line-height: 1.2;
 			margin-top: 35px;
 			margin-bottom: 37px;
-			line-height: 1.2;
 		}
 		table{
 			tr td{
@@ -133,7 +134,6 @@
 			}
 			tr:last-child td{
 				border-bottom: none;
-
 			}
 		}
 	}
@@ -228,7 +228,6 @@
 
 
 
-
 /* Оформление блока меню */
 .lavaLamp {
 	position: relative;
@@ -264,8 +263,4 @@
 	left: 50%;
 	width: 53px;
 	margin-right: 9px;
-}
-
-/* Оформление кпопки. */
-.lavaLamp li a {
 }
