--- a/css/styles.css
+++ b/css/styles.css
@@ -821,11 +821,11 @@ footer .bottom .copyright {
 .other-products-carousel .item .title {
   bottom: 125px;
   font-size: 23px;
+  left: 5%;
   line-height: 1.2;
   padding-top: 46px;
   position: absolute;
   width: 90%;
-  left: 5%;
 }
 .home-catalog .item .list-item-product,
 .other-products-carousel .item .list-item-product {
@@ -953,6 +953,7 @@ footer .bottom .copyright {
 #foo3 .owl-controls {
   top: 200px;
   width: 100%;
+  z-index: 1;
 }
 #foo3 .owl-buttons .owl-prev,
 #foo3 .owl-buttons .owl-next {
@@ -977,10 +978,10 @@ footer .bottom .copyright {
   background-image: url(../images/sprite.png);
   background-repeat: no-repeat;
   background-position: 0 -14px;
-  width: 13px;
   height: 21px;
-  top: 10px;
   left: 12px;
+  top: 10px;
+  width: 13px;
 }
 #foo3 .owl-buttons .owl-prev:hover,
 #foo3 .owl-buttons .owl-next:hover {
@@ -1029,9 +1030,9 @@ footer .bottom .copyright {
   padding-top: 22px;
 }
 .product-info .description .text {
+  line-height: 1.2;
   margin-top: 35px;
   margin-bottom: 37px;
-  line-height: 1.2;
 }
 .product-info .description table tr td {
   border-top: none !important;
@@ -1161,7 +1162,6 @@ footer .bottom .copyright {
   width: 53px;
   margin-right: 9px;
 }
-/* Оформление кпопки. */
 ::-ms-clear {
   display: none;
 }
